pointer on check buttons

--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,9 @@ ul {
   overflow: scroll;
   height: 70px;
 }
+.check-button {
+  cursor: pointer;
+}
 /* nav bar */
 .nav-bar {
   grid-area: nav-bar;
